# agent-intercom

./: .gitignore  .hve-tracking.json  AGENTS.md  Cargo.toml  README.md  agent-intercom.code-workspace  agent-rc.code-workspace  agent-rem.code-workspace  config.toml  config.toml.example  cpstart.ps1  findings.json  run-debug-acp.ps1  run-debug.ps1  start.ps1  start.sh
.agentrc/: settings.json
.autoharness/: config.yaml  workspace-profile.yaml
.autoharness/tuning-reports/: 2026-04-15-tuning-report.md
.backlog/: config.yml
.backlog/completed/: task-001 - MCP-Remote-Agent-Server.md  task-001.01 - Format--`[ID]-[P-]-[Story]-Description`.md  task-001.02 - Path-Conventions.md  task-001.03 - Setup-(Shared-Infrastructure).md  task-001.04 - Foundational-(Blocking-Prerequisites).md  task-001.05 - User-Story-1-—-Remote-Code-Review-and-Approval-(Priority--P1.md  task-001.06 - User-Story-2-—-Programmatic-Diff-Application-(Priority--P1).md  task-001.07 - User-Story-4-—-Agent-Stall-Detection-and-Remote-Nudge-(Prior.md  task-001.08 - User-Story-3-—-Remote-Status-Logging-(Priority--P2).md  task-001.09 - User-Story-5-—-Continuation-Prompt-Forwarding-(Priority--P2).md  task-001.10 - Integration-Test-Suite.md  task-001.10 - User-Story-6-—-Workspace-Auto-Approve-Policy-(Priority--P2).md  task-001.10.01 - Format--`[ID]-[P-]-[Story]-Description`.md  task-001.10.02 - Setup-(Test-Module-Registration).md  task-001.10.03 - User-Story-6-—-Policy-Hot-Reload-(Priority--P2,-FR-007)-🎯-MV.md  task-001.10.04 - User-Story-7-—-IPC-Server-Command-Dispatch-(Priority--P3,-FR.md  task-001.10.05 - User-Story-1-—-MCP-Transport-Dispatch-(Priority--P1,-FR-001).md  task-001.10.06 - Polish-&-Cross-Cutting-Concerns.md  task-001.10.07 - Dependencies-&-Execution-Order.md  task-001.10.08 - Parallel-Example--Phase-2-(US6).md  (+126 more)
.backlogit/: hooks_queue.jsonl  migration.yaml  stash.jsonl
.beads/: .beads-credential-key  metadata.json
.cargo/: audit.toml
.context/: Agent-Harness-ExecutionPlan.md  MonocoqueAgentRemote.spec.md  RemoteCopilotAgentManagement.research.md  backlog.md  feature_mcp_notifications.md
.engram/: registry.yaml
.github/: copilot-instructions.md
.intercom/: agent-intercom-manifest.json  settings.json
ctl/: main.rs
data/: monocoque.db  monocoque.db-shm  monocoque.db-wal
docs/: REFERENCE.md  cli-reference.md  configuration.md  developer-guide.md  migration-guide.md  setup-guide.md  slack-app-setup.md  user-guide.md
persistence/: schema.rs
scripts/: acquire_lock.ps1  acquire_lock.sh  release_lock.ps1  release_lock.sh  run_automated_test_harness.ps1  run_hitl_tests.ps1  search.ps1  search.sh  test_slack_approval.py
src/: config.rs  config_watcher.rs  errors.rs  lib.rs  main.rs  mode.rs
tests/: contract.rs  integration.rs  live.rs  unit.rs
(+933 files in other folders)
